--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Nik's Hangman App</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -15,7 +17,15 @@
                 </div>
             </div>
 
-            <
+            <div class="row">
+                <div class="col-lg-4">
+                    left side
+                </div>
+
+                <div class="col-lg-8">
+                    right side
+                </div>
+            </div>
 
         </div>
 
